# cli-tool

./: .env.example  .gitignore  README.md  justfile  pyproject.toml
src/cli_tool/: __init__.py  main.py
src/cli_tool/commands/: __init__.py  analyze.py  ask_file.py  chat.py  email.py  meeting.py  repo_review.py  research.py  review.py  tokens.py  tokens_chat.py
src/cli_tool/core/: __init__.py  analysis.py  chunking.py  config.py  errors.py  files.py  json_output.py  models.py  output.py  repo_review.py  retrieval.py  sessions.py  structured_outputs.py  token_counter.py  token_policy.py
src/cli_tool/prompts/: __init__.py  types.py  workflows.py
src/cli_tool/providers/: __init__.py  anthropic_client.py  openai_client.py
src/cli_tool/schemas/: __init__.py  analyze.py  ask_file.py  meeting.py  repo_review.py  research.py  review.py  tokens.py
src/cli_tool/templates/: __init__.py  code_review.py  email.py  meeting.py
tests/: test_cli.py  test_config.py  test_files.py  test_new_features.py  test_providers.py  test_templates.py
